# FPLinker

./: CMakeLists.txt  README.md  install.sh
src/: AppCard.cpp  AppCard.h  FlatpakManager.cpp  FlatpakManager.h  MainWindow.cpp  MainWindow.h  MarketCard.cpp  MarketCard.h  main.cpp
